commit-15:添加导航栏用户信息修改，使用sharedPreferences进行存储

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NoteBook</string>
+    <string name="shared_preference_name">notebook</string>
 </resources>
